systemrdl/parser/SystemRDLParser.py
# Generated from SystemRDL.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SystemRDLParser ( Parser ):

    grammarFileName = "SystemRDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "','", "'#'", "'('", 
                     "')'", "'.'", "'?'", "':'", "'''", "'['", "']'", "'::'", 
                     "'->'", "<INVALID>", "<INVALID>", "'boolean'", "'bit'", 
                     "'longint'", "'unsigned'", "'string'", "'accesstype'", 
                     "'addressingtype'", "'onreadtype'", "'onwritetype'", 
                     "'alias'", "'external'", "'internal'", "'addrmap'", 
                     "'regfile'", "'reg'", "'field'", "'mem'", "'signal'", 
                     "'true'", "'false'", "'na'", "'rw'", "'wr'", "'r'", 
                     "'w'", "'rw1'", "'w1'", "'rclr'", "'rset'", "'ruser'", 
                     "'woset'", "'woclr'", "'wot'", "'wzs'", "'wzc'", "'wzt'", 
                     "'wclr'", "'wset'", "'wuser'", "'compact'", "'regalign'", 
                     "'fullalign'", "'hw'", "'sw'", "'posedge'", "'negedge'", 
                     "'bothedge'", "'level'", "'nonsticky'", "'abstract'", 
                     "'all'", "'component'", "'componentwidth'", "'constraint'", 
                     "'default'", "'enum'", "'encode'", "'inside'", "'number'", 
                     "'property'", "'ref'", "'struct'", "'this'", "'type'", 
                     "'alternate'", "'byte'", "'int'", "'precedencetype'", 
                     "'real'", "'shortint'", "'shortreal'", "'signed'", 
                     "'with'", "'within'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'!'", "'~'", "'&&'", "'~&'", 
                     "'&'", "'|'", "'||'", "'~|'", "'^'", "<INVALID>", "'<<'", 
                     "'>>'", "'*'", "'**'", "'/'", "'%'", "'=='", "'='", 
                     "'!='", "'<='", "'<'", "'>='", "'>'", "'@'", "'+='", 
                     "'%='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SL_COMMENT", "ML_COMMENT", "BOOLEAN_kw", "BIT_kw", 
                      "LONGINT_kw", "UNSIGNED_kw", "STRING_kw", "ACCESSTYPE_kw", 
                      "ADDRESSINGTYPE_kw", "ONREADTYPE_kw", "ONWRITETYPE_kw", 
                      "ALIAS_kw", "EXTERNAL_kw", "INTERNAL_kw", "ADDRMAP_kw", 
                      "REGFILE_kw", "REG_kw", "FIELD_kw", "MEM_kw", "SIGNAL_kw", 
                      "TRUE_kw", "FALSE_kw", "NA_kw", "RW_kw", "WR_kw", 
                      "R_kw", "W_kw", "RW1_kw", "W1_kw", "RCLR_kw", "RSET_kw", 
                      "RUSER_kw", "WOSET_kw", "WOCLR_kw", "WOT_kw", "WZS_kw", 
                      "WZC_kw", "WZT_kw", "WCLR_kw", "WSET_kw", "WUSER_kw", 
                      "COMPACT_kw", "REGALIGN_kw", "FULLALIGN_kw", "HW_kw", 
                      "SW_kw", "POSEDGE_kw", "NEGEDGE_kw", "BOTHEDGE_kw", 
                      "LEVEL_kw", "NONSTICKY_kw", "ABSTRACT_kw", "ALL_kw", 
                      "COMPONENT_kw", "COMPONENTWIDTH_kw", "CONSTRAINT_kw", 
                      "DEFAULT_kw", "ENUM_kw", "ENCODE_kw", "INSIDE_kw", 
                      "NUMBER_kw", "PROPERTY_kw", "REF_kw", "STRUCT_kw", 
                      "THIS_kw", "TYPE_kw", "ALTERNATE_kw", "BYTE_kw", "INT_kw", 
                      "PRECEDENCETYPE_kw", "REAL_kw", "SHORTINT_kw", "SHORTREAL_kw", 
                      "SIGNED_kw", "WITH_kw", "WITHIN_kw", "INT", "HEX_INT", 
                      "VLOG_INT", "STRING", "PLUS", "MINUS", "BNOT", "NOT", 
                      "BAND", "NAND", "AND", "OR", "BOR", "NOR", "XOR", 
                      "XNOR", "LSHIFT", "RSHIFT", "MULT", "EXP", "DIV", 
                      "MOD", "EQ", "ASSIGN", "NEQ", "LEQ", "LT", "GEQ", 
                      "GT", "AT", "INC", "ALIGN", "WS", "ID" ]

    RULE_root = 0
    RULE_root_elem = 1
    RULE_component_def = 2
    RULE_explicit_component_inst = 3
    RULE_component_inst_alias = 4
    RULE_component_named_def = 5
    RULE_component_anon_def = 6
    RULE_component_body = 7
    RULE_component_body_elem = 8
    RULE_component_insts = 9
    RULE_component_inst = 10
    RULE_field_inst_reset = 11
    RULE_inst_addr_fixed = 12
    RULE_inst_addr_stride = 13
    RULE_inst_addr_align = 14
    RULE_component_inst_type = 15
    RULE_component_type = 16
    RULE_component_type_primary = 17
    RULE_param_def = 18
    RULE_param_def_elem = 19
    RULE_param_inst = 20
    RULE_param_assignment = 21
    RULE_expr = 22
    RULE_expr_primary = 23
    RULE_concatenate = 24
    RULE_replicate = 25
    RULE_paren_expr = 26
    RULE_cast = 27
    RULE_cast_width_expr = 28
    RULE_range_suffix = 29
    RULE_array_suffix = 30
    RULE_array_type_suffix = 31
    RULE_data_type = 32
    RULE_basic_data_type = 33
    RULE_literal = 34
    RULE_number = 35
    RULE_string_literal = 36
    RULE_boolean_literal = 37
    RULE_array_literal = 38
    RULE_struct_literal = 39
    RULE_struct_kv = 40
    RULE_enum_literal = 41
    RULE_accesstype_literal = 42
    RULE_onreadtype_literal = 43
    RULE_onwritetype_literal = 44
    RULE_addressingtype_literal = 45
    RULE_precedencetype_literal = 46
    RULE_instance_ref = 47
    RULE_instance_ref_element = 48
    RULE_prop_ref = 49
    RULE_local_property_assignment = 50
    RULE_dynamic_property_assignment = 51
    RULE_normal_prop_assign = 52
    RULE_encode_prop_assign = 53
    RULE_prop_mod_assign = 54
    RULE_prop_assignment_rhs = 55
    RULE_prop_keyword = 56
    RULE_prop_mod = 57
    RULE_udp_def = 58
    RULE_udp_attr = 59
    RULE_udp_type = 60
    RULE_udp_data_type = 61
    RULE_udp_usage = 62
    RULE_udp_comp_type = 63
    RULE_udp_default = 64
    RULE_udp_constraint = 65
    RULE_enum_def = 66
    RULE_enum_entry = 67
    RULE_enum_prop_assign = 68
    RULE_struct_def = 69
    RULE_struct_body = 70
    RULE_struct_elem = 71
    RULE_struct_type = 72
    RULE_constraint_def = 73
    RULE_constraint_named_def = 74
    RULE_constraint_anon_def = 75
    RULE_constraint_body = 76
    RULE_constraint_body_elem = 77
    RULE_constraint_insts = 78
    RULE_constr_relational = 79
    RULE_constr_prop_assign = 80
    RULE_constr_inside_values = 81
    RULE_constr_inside_enum = 82
    RULE_constr_lhs = 83
    RULE_constr_inside_value = 84

    ruleNames =  [ "root", "root_elem", "component_def", "explicit_component_inst", 
                   "component_inst_alias", "component_named_def", "component_anon_def", 
                   "component_body", "component_body_elem", "component_insts", 
                   "component_inst", "field_inst_reset", "inst_addr_fixed", 
                   "inst_addr_stride", "inst_addr_align", "component_inst_type", 
                   "component_type", "component_type_primary", "param_def", 
                   "param_def_elem", "param_inst", "param_assignment", "expr", 
                   "expr_primary", "concatenate", "replicate", "paren_expr", 
                   "cast", "cast_width_expr", "range_suffix", "array_suffix", 
                   "array_type_suffix", "data_type", "basic_data_type", 
                   "literal", "number", "string_literal", "boolean_literal", 
                   "array_literal", "struct_literal", "struct_kv", "enum_literal", 
                   "accesstype_literal", "onreadtype_literal", "onwritetype_literal", 
                   "addressingtype_literal", "precedencetype_literal", "instance_ref", 
                   "instance_ref_element", "prop_ref", "local_property_assignment", 
                   "dynamic_property_assignment", "normal_prop_assign", 
                   "encode_prop_assign", "prop_mod_assign", "prop_assignment_rhs", 
                   "prop_keyword", "prop_mod", "udp_def", "udp_attr", "udp_type", 
                   "udp_data_type", "udp_usage", "udp_comp_type", "udp_default", 
                   "udp_constraint", "enum_def", "enum_entry", "enum_prop_assign", 
                   "struct_def", "struct_body", "struct_elem", "struct_type", 
                   "constraint_def", "constraint_named_def", "constraint_anon_def", 
                   "constraint_body", "constraint_body_elem", "constraint_insts", 
                   "constr_relational", "constr_prop_assign", "constr_inside_values", 
                   "constr_inside_enum", "constr_lhs", "constr_inside_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    SL_COMMENT=16
    ML_COMMENT=17
    BOOLEAN_kw=18
    BIT_kw=19
    LONGINT_kw=20
    UNSIGNED_kw=21
    STRING_kw=22
    ACCESSTYPE_kw=23
    ADDRESSINGTYPE_kw=24
    ONREADTYPE_kw=25
    ONWRITETYPE_kw=26
    ALIAS_kw=27
    EXTERNAL_kw=28
    INTERNAL_kw=29
    ADDRMAP_kw=30
    REGFILE_kw=31
    REG_kw=32
    FIELD_kw=33
    MEM_kw=34
    SIGNAL_kw=35
    TRUE_kw=36
    FALSE_kw=37
    NA_kw=38
    RW_kw=39
    WR_kw=40
    R_kw=41
    W_kw=42
    RW1_kw=43
    W1_kw=44
    RCLR_kw=45
    RSET_kw=46
    RUSER_kw=47
    WOSET_kw=48
    WOCLR_kw=49
    WOT_kw=50
    WZS_kw=51
    WZC_kw=52
    WZT_kw=53
    WCLR_kw=54
    WSET_kw=55
    WUSER_kw=56
    COMPACT_kw=57
    REGALIGN_kw=58
    FULLALIGN_kw=59
    HW_kw=60
    SW_kw=61
    POSEDGE_kw=62
    NEGEDGE_kw=63
    BOTHEDGE_kw=64
    LEVEL_kw=65
    NONSTICKY_kw=66
    ABSTRACT_kw=67
    ALL_kw=68
    COMPONENT_kw=69
    COMPONENTWIDTH_kw=70
    CONSTRAINT_kw=71
    DEFAULT_kw=72
    ENUM_kw=73
    ENCODE_kw=74
    INSIDE_kw=75
    NUMBER_kw=76
    PROPERTY_kw=77
    REF_kw=78
    STRUCT_kw=79
    THIS_kw=80
    TYPE_kw=81
    ALTERNATE_kw=82
    BYTE_kw=83
    INT_kw=84
    PRECEDENCETYPE_kw=85
    REAL_kw=86
    SHORTINT_kw=87
    SHORTREAL_kw=88
    SIGNED_kw=89
    WITH_kw=90
    WITHIN_kw=91
    INT=92
    HEX_INT=93
    VLOG_INT=94
    STRING=95
    PLUS=96
    MINUS=97
    BNOT=98
    NOT=99
    BAND=100
    NAND=101
    AND=102
    OR=103
    BOR=104
    NOR=105
    XOR=106
    XNOR=107
    LSHIFT=108
    RSHIFT=109
    MULT=110
    EXP=111
    DIV=112
    MOD=113
    EQ=114
    ASSIGN=115
    NEQ=116
    LEQ=117
    LT=118
    GEQ=119
    GT=120
    AT=121
    INC=122
    ALIGN=123
    WS=124
    ID=125

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SystemRDLParser.EOF, 0)

        def root_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SystemRDLParser.Root_elemContext)
            else:
                return self.getTypedRuleContext(SystemRDLParser.Root_elemContext,i)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = SystemRDLParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SystemRDLParser.ALIAS_kw) | (1 << SystemRDLParser.EXTERNAL_kw) | (1 << SystemRDLParser.INTERNAL_kw) | (1 << SystemRDLParser.ADDRMAP_kw) | (1 << SystemRDLParser.REGFILE_kw) | (1 << SystemRDLParser.REG_kw) | (1 << SystemRDLParser.FIELD_kw) | (1 << SystemRDLParser.MEM_kw) | (1 << SystemRDLParser.SIGNAL_kw) | (1 << SystemRDLParser.RCLR_kw) | (1 << SystemRDLParser.RSET_kw) | (1 << SystemRDLParser.WOSET_kw) | (1 << SystemRDLParser.WOCLR_kw) | (1 << SystemRDLParser.HW_kw) | (1 << SystemRDLParser.SW_kw) | (1 << SystemRDLParser.POSEDGE_kw) | (1 << SystemRDLParser.NEGEDGE_kw))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (SystemRDLParser.BOTHEDGE_kw - 64)) | (1 << (SystemRDLParser.LEVEL_kw - 64)) | (1 << (SystemRDLParser.NONSTICKY_kw - 64)) | (1 << (SystemRDLParser.ABSTRACT_kw - 64)) | (1 << (SystemRDLParser.CONSTRAINT_kw - 64)) | (1 << (SystemRDLParser.DEFAULT_kw - 64)) | (1 << (SystemRDLParser.ENUM_kw - 64)) | (1 << (SystemRDLParser.ENCODE_kw - 64)) | (1 << (SystemRDLParser.PROPERTY_kw - 64)) | (1 << (SystemRDLParser.STRUCT_kw - 64)) | (1 << (SystemRDLParser.ID - 64)))) != 0):
                self.state = 170
                self.root_elem()
                self.state = 171
                self.match(SystemRDLParser.T__0)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(SystemRDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Root_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Component_defContext,0)


        def enum_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Enum_defContext,0)


        def udp_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Udp_defContext,0)


        def struct_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Struct_defContext,0)


        def constraint_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Constraint_defContext,0)


        def explicit_component_inst(self):
            return self.getTypedRuleContext(SystemRDLParser.Explicit_component_instContext,0)


        def local_property_assignment(self):
            return self.getTypedRuleContext(SystemRDLParser.Local_property_assignmentContext,0)


        def dynamic_property_assignment(self):
            return self.getTypedRuleContext(SystemRDLParser.Dynamic_property_assignmentContext,0)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_root_elem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot_elem" ):
                return visitor.visitRoot_elem(self)
            else:
                return visitor.visitChildren(self)




    def root_elem(self):

        localctx = SystemRDLParser.Root_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_root_elem)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.component_def()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.enum_def()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.udp_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.struct_def()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 184
                self.constraint_def()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 185
                self.explicit_component_inst()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 186
                self.local_property_assignment()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 187
                self.dynamic_property_assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Component_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component_named_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Component_named_defContext,0)


        def component_inst_type(self):
            return self.getTypedRuleContext(SystemRDLParser.Component_inst_typeContext,0)


        def component_insts(self):
            return self.getTypedRuleContext(SystemRDLParser.Component_instsContext,0)


        def component_anon_def(self):
            return self.getTypedRuleContext(SystemRDLParser.Component_anon_defContext,0)


        def getRuleIndex(self):
            return SystemRDLParser.RULE_component_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent_def" ):
                return visitor.visitComponent_def(self)
            else:
                return visitor.visitChildren(self)




    def component_def(self):
